--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,17 +1,65 @@
-name: Build and Deploy Frontend
+name: Test & Build & Deploy Frontend
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, main ]
+  pull_request:
+    branches: [ master, main ]
 
 permissions:
   contents: read
+  checks: write
+  pull-requests: write
 
 jobs:
-  build-and-deploy:
+  # ============================================================================
+  # STAGE 1: Test - Run unit and integration tests on every commit/PR
+  # ============================================================================
+  test:
     runs-on: ubuntu-latest
+    name: Test Suite
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run linter
+        run: npm run lint
+
+      - name: Run tests
+        run: npm test -- --run --reporter=default
+
+      - name: Generate coverage report
+        run: npm run test:coverage || echo "Coverage report generation skipped"
+        continue-on-error: true
+
+      - name: Publish test results
+        uses: EnricoMi/publish-unit-test-result-action@v2
+        if: always()
+        with:
+          files: |
+            **/__tests__/**/*.test.ts
+            **/__tests__/**/*.test.tsx
+          check_name: Test Results
+
+  # ============================================================================
+  # STAGE 2: Build & Deploy - Only runs on push to master/main (skip on PR)
+  # ============================================================================
+  build-and-deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    name: Build & Deploy to Production
+    # Only run on push to master/main, not on PRs
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
     env:
-      # Optional: set FRONTEND_API_BASE_URL in repository secrets to provide API_URL to Vercel
       FRONTEND_API_BASE_URL: ${{ secrets.FRONTEND_API_BASE_URL }}
     steps:
       - name: Checkout repository
@@ -21,59 +69,99 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-
-      - name: Cache npm
-        uses: actions/cache@v4
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+          cache: 'npm'
 
       - name: Install dependencies
-        working-directory: .
         run: npm ci
 
-      - name: Lint
-        working-directory: .
-        run: npm run lint
-
-      - name: Build
-        working-directory: .
+      - name: Build production bundle
         run: |
-          # Provide Vite build with VITE_API_BASE_URL from secrets so the static build contains the correct API endpoint
           if [ -n "${{ secrets.FRONTEND_API_BASE_URL }}" ]; then
             echo "Using VITE_API_BASE_URL from secrets"
             export VITE_API_BASE_URL="${{ secrets.FRONTEND_API_BASE_URL }}"
           fi
           npm run build
 
-      - name: Build frontend Docker image (verify Dockerfile)
+      - name: Verify dist output (no tests or docs)
         run: |
-          # Build the Docker image using the repository root as context so ops/nginx is included
-          # Pass the VITE_API_BASE_URL as a build-arg so the builder stage has the same env
-          if [ -n "${{ secrets.FRONTEND_API_BASE_URL }}" ]; then
-            docker build --build-arg VITE_API_BASE_URL="${{ secrets.FRONTEND_API_BASE_URL }}" -f Dockerfile -t stockease-frontend-ci:latest .
+          echo "Checking dist folder contents..."
+          if [ -d "dist" ]; then
+            echo "✓ dist/ directory exists"
+            ls -la dist/
+            
+            # Verify no test files in dist
+            if find dist -name "*.test.*" -o -name "*spec.*" | grep -q .; then
+              echo "✗ ERROR: Test files found in dist/"
+              exit 1
+            fi
+            echo "✓ No test files in dist/"
+            
+            # Verify no docs in dist
+            if [ -d "dist/docs" ]; then
+              echo "✗ ERROR: docs/ directory found in dist/"
+              exit 1
+            fi
+            echo "✓ No docs/ directory in dist/"
           else
-            docker build -f Dockerfile -t stockease-frontend-ci:latest .
-          fi
-
-      - name: Deploy to Vercel (use frontend Dockerfile)
-        working-directory: .
-        env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-          FRONTEND_API_BASE_URL: ${{ secrets.FRONTEND_API_BASE_URL }}
-        run: |
-          set -euo pipefail
-          if [ -z "${VERCEL_TOKEN:-}" ]; then
-            echo "VERCEL_TOKEN not set in repository secrets" >&2
+            echo "✗ ERROR: dist/ directory not found"
             exit 1
           fi
+
+      - name: Build Docker image (verify Dockerfile)
+        run: |
+          echo "Building Docker image for verification..."
+          if [ -n "${{ secrets.FRONTEND_API_BASE_URL }}" ]; then
+            docker build \
+              --build-arg VITE_API_BASE_URL="${{ secrets.FRONTEND_API_BASE_URL }}" \
+              -f Dockerfile \
+              -t stockease-frontend-ci:latest .
+          else
+            docker build \
+              -f Dockerfile \
+              -t stockease-frontend-ci:latest .
+          fi
+          echo "✓ Docker image built successfully"
+
+      - name: Deploy to Vercel
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+        run: |
+          set -euo pipefail
+          
+          if [ -z "${VERCEL_TOKEN:-}" ]; then
+            echo "✗ ERROR: VERCEL_TOKEN not set in repository secrets"
+            exit 1
+          fi
+          
+          echo "Deploying to Vercel..."
           flags=()
+          
           if [ -n "${FRONTEND_API_BASE_URL:-}" ]; then
-            # Pass to Vercel as VITE_API_BASE_URL so the build picks it up
             flags+=(--env "VITE_API_BASE_URL=${FRONTEND_API_BASE_URL}")
           fi
-          # Deploy with Vercel CLI: deploy the frontend folder which contains a Dockerfile
-          # Vercel will detect the Dockerfile and build using it on Vercel's side.
-          npx vercel --prod --token "$VERCEL_TOKEN" --confirm --yes "${flags[@]}"
+          
+          npx vercel deploy --prod --token "$VERCEL_TOKEN" --confirm --yes "${flags[@]}" || {
+            echo "✗ Deployment failed"
+            exit 1
+          }
+          
+          echo "✓ Deployment completed successfully"
+
+      - name: Deployment Summary
+        if: success()
+        run: |
+          echo "✓ Pipeline completed successfully!"
+          echo ""
+          echo "Summary:"
+          echo "- Tests passed ✓"
+          echo "- Build successful ✓"
+          echo "- Docker image verified ✓"
+          echo "- Deployed to production ✓"
+
+      - name: Notify on failure
+        if: failure()
+        run: |
+          echo "✗ Pipeline failed!"
+          echo "Please check the logs above for details."
+          exit 1
+
