--- a/ops/nginx/nginx.conf
+++ b/ops/nginx/nginx.conf
@@ -1,16 +1,110 @@
+# ============================================================================
+# Nginx Configuration for StockEase Frontend SPA
+# ============================================================================
+# This configuration serves a React Single Page Application (SPA) with:
+# - SPA routing support (all routes fallback to index.html)
+# - Gzip compression for optimal performance
+# - Security headers and caching strategies
+
 server {
   listen 80;
-  server_name localhost;
+  server_name _;
 
+  # Root directory containing React build output (dist/)
+  # dist/ is copied from Docker builder stage
   root /usr/share/nginx/html;
+  
+  # Default file to serve for directory requests
   index index.html;
 
+  # =========================================================================
+  # SPA Routing: Fallback to index.html for React Router
+  # =========================================================================
+  # React Router requires all non-file routes to serve index.html
+  # This allows React to handle routing on the client side
+  # Example: /user/profile, /product/123, /admin/dashboard all serve index.html
   location / {
     try_files $uri $uri/ /index.html;
   }
 
-  # Optional: enable gzip compression
+  # =========================================================================
+  # Static Assets: Cache long-lived assets (JS, CSS, fonts)
+  # =========================================================================
+  # Vite generates versioned filenames (main.abc123.js) for all assets
+  # These can be cached aggressively since filenames change on each rebuild
+  location ~* \.(js|css|svg|woff|woff2|ttf|eot|otf)$ {
+    expires 1y;
+    add_header Cache-Control "public, immutable";
+    access_log off;
+  }
+
+  # =========================================================================
+  # Images: Cache images for moderate duration
+  # =========================================================================
+  location ~* \.(png|jpg|jpeg|gif|webp|ico)$ {
+    expires 30d;
+    add_header Cache-Control "public, must-revalidate";
+    access_log off;
+  }
+
+  # =========================================================================
+  # HTML Files: Don't cache (allow browser to check for updates)
+  # =========================================================================
+  # index.html should not be cached to ensure users get latest version
+  location ~* \.html?$ {
+    add_header Cache-Control "public, max-age=0, must-revalidate";
+    add_header ETag "$file_mtime";
+  }
+
+  # =========================================================================
+  # Compression: Gzip compression for better performance
+  # =========================================================================
+  # Reduces payload size significantly (typical 60-80% reduction)
+  # Applies to all text-based content types
   gzip on;
-  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+  gzip_vary on;
   gzip_min_length 256;
+  gzip_types 
+    text/plain 
+    text/css 
+    text/xml 
+    text/javascript 
+    application/json 
+    application/javascript 
+    application/xml+rss 
+    application/rss+xml
+    application/atom+xml
+    image/svg+xml
+    font/truetype
+    font/opentype
+    application/vnd.ms-fontobject
+    application/x-font-ttf;
+  
+  # Don't compress already compressed files
+  gzip_disable "msie6";
+  
+  # Compression level (1-9, higher = more compression but slower)
+  # Level 6 provides good balance between compression ratio and speed
+  gzip_comp_level 6;
+
+  # =========================================================================
+  # Security Headers
+  # =========================================================================
+  # Prevent MIME type sniffing
+  add_header X-Content-Type-Options "nosniff" always;
+  
+  # Enable XSS protection in older browsers
+  add_header X-XSS-Protection "1; mode=block" always;
+  
+  # Prevent clickjacking attacks
+  add_header X-Frame-Options "DENY" always;
+  
+  # Control referrer information
+  add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+  # =========================================================================
+  # Error Pages
+  # =========================================================================
+  # Serve index.html for 404 to allow React Router to handle routing
+  error_page 404 /index.html;
 }
