--- a/package.json
+++ b/package.json
@@ -11,7 +11,42 @@
     "test": "vitest --run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+
+    "docs:clean": "rimraf public-docs && mkdir -p public-docs/architecture && mkdir -p public-docs/typedoc && mkdir -p public-docs/coverage",
+    "docs:arch": "bash ./scripts/build-arch-docs.sh",
+    "docs:typedoc": "typedoc",
+    "docs:coverage": "vitest run --coverage",
+    "docs:landing": "node ./scripts/build-landing.mjs",
+    "docs:all": "npm run docs:clean && npm run docs:arch && npm run docs:typedoc && npm run docs:coverage && npm run docs:landing"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:@typescript-eslint/recommended",
+      "plugin:react/recommended",
+      "plugin:react-hooks/recommended",
+      "plugin:tailwindcss/recommended",
+      "plugin:prettier/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "ecmaVersion": 2020,
+      "sourceType": "module",
+      "ecmaFeatures": {
+        "jsx": true
+      }
+    },
+    "plugins": [
+      "@typescript-eslint",
+      "react",
+      "react-hooks",
+      "tailwindcss",
+      "prettier"
+    ],
+    "rules": {
+      "react/react-in-jsx-scope": "off",
+      "prettier/prettier": "error"
+    }
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
@@ -54,7 +89,9 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
+    "typedoc": "^0.26.0",
     "vite": "^6.0.5",
-    "vitest": "^4.0.8"
+    "vitest": "^4.0.8",
+    "rimraf": "^6.0.0"
   }
 }
