--- a/.github/workflows/docs-pipeline.yml
+++ b/.github/workflows/docs-pipeline.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: [ main, master ]
     paths:
+      - 'scripts/**'
       - 'docs/**'
       - 'src/**'
       - 'typedoc.json'
